# kettle-cycle-test-demo

./: .gitignore  CLAUDE.md  Makefile  README.md  changelog.md  e2e_test.go  force_sensor.go  force_sensor_test.go  go.mod  go.sum  module.go  module_test.go  product_spec.md  sensor.go  sensor_test.go  trial_sensor.go  trial_sensor_test.go
.claude/agents/: changelog-updater.md  docs-updater.md  pre-work-check.md  retro-reviewer.md  test-scrutinizer.md
docs/: 00-index.md  01-viam-introduction.md  02-architecture.md  execution-overview.md
kettle-sim-module/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  meta.json  pyproject.toml  requirements.txt  viam-config.json
kettle-sim-module/docker/: machine-config.json  start.sh
kettle-sim-module/models/: lite6.xml
kettle-sim-module/models/kettle/: model.config  model.sdf
kettle-sim-module/models/lite6/: README.md
kettle-sim-module/models/xarm6/: model.sdf
kettle-sim-module/modules/gazebo-arm/: main.py  meta.json
kettle-sim-module/modules/gazebo-sensor/: main.py  meta.json  requirements.txt
kettle-sim-module/src/kettle_sim/: __init__.py  __main__.py  gazebo_bridge.py  gazebo_manager.py  mujoco_sim.py  sim_arm.py  sim_force_sensor.py
kettle-sim-module/tests/: __init__.py  conftest.py  test_gazebo_bridge.py  test_mujoco_sim.py  test_sim_arm.py  test_sim_force_sensor.py
kettle-sim-module/web/: index.html  package-lock.json  package.json  vite.config.ts
kettle-sim-module/web/src/: main.ts  robot-visualizer.ts  viam-client.ts
kettle-sim-module/worlds/: kettle_test.sdf  kettle_world.sdf
(+10 files in other folders)
